Update overleaf to texstudio

--- a/Thesis/LaTeX/Abstract.tex
+++ b/Thesis/LaTeX/Abstract.tex
@@ -4,8 +4,8 @@
 	Leuven, May, 2022.
 \end{flushright}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\acrfull{ai} has grown ingrained in the \acrshort{it} sector, and the technology is becoming increasingly incorporated into our daily lives. Businesses are aware of this and are trying to use this technology to automate repetitive and ordinary work, which subsequently results in a more efficient and productive way of working. Customer service chatbots are an example of this. These "robots" are ideologically capable of largely taking over the customer service from physical agents. It is critical that these chatbots continue to produce high-quality work in order to improve the customer experience and satisfaction, as this has a significant impact on customer trust and brand reputation.\\
+\acrfull{ai} has grown ingrained in the \acrshort{it} sector, and technology is increasingly incorporated into our daily lives. Businesses are aware of this switch and are trying to use \acrshort{ai} to automate repetitive and ordinary work, which results in a more efficient and productive way of working. Customer service chatbots are an example of this. These "robots" are ideally capable of largely taking over the customer service from human agents. It is critical that these chatbots continue to produce high-quality work in order to improve customer experience and satisfaction, as this has a significant impact on customer trust and brand reputation.\\
 \break
-The goal of this research is to determine the impact of chatbots on companies' current and future strategies, as well as what customers expect from such a customer service chatbot. The research is applied within the scope of the Belgian and Dutch telecom industry. Interviews with Belgian and Dutch telecom companies (Proximus, Telenet, T-Mobile, and KPN) were done as part of this research, as well as a survey to get customer insights/expectations on these chatbots and what's important about them.
-
-%This is still a work in progress => The results-part should also be included in the abstract
+The goal of this research is to determine the impact of chatbots on companies' current and future strategies, as well as what customers expect from such a chatbot. The research is applied within the scope of the Belgian and Dutch telecom industries. Interviews with telecom companies such as Proximus, Telenet, T-Mobile, and KPN were done as part of this research, as well as a survey to get customer insights/expectations on these chatbots and what is important to them.\\
+\break
+The results show that in the future, telecom providers want to optimise their chatbots through data analysis, with sentiment analysis as the most common approach. From the importance study, it can be concluded that the chatbot should be easy to use and available 24/7.
