--- a/Thesis/LaTeX/Appendices.tex
+++ b/Thesis/LaTeX/Appendices.tex
@@ -1,4 +1,5 @@
 \begin{appendices}
+	\pagestyle{headings}
 	\chapter{Business Interviews}
 	\label{ch:appendices}
 	The write-out of these interview are a streamlined version. It's not a literal transcription to increase readability and because most of these interview had to be translated from Dutch to English.
