--- a/Thesis/LaTeX/Conclusion.tex
+++ b/Thesis/LaTeX/Conclusion.tex
@@ -2,8 +2,8 @@
 \pagestyle{headings}
 \chapter{Conclusion}
 \label{ch:conclusion}
-Chatbots are increasingly being used to take over repetitive tasks from agents; the telecom industry is one of those sectors where they are already prominently present. Through a qualitative chatbot, a company can create value that can provide a potential competitive advantage. To create this advantage, it is therefore necessary that this chatbot delivers quality work. In order to uncover the definition of quality in this context, interviews were conducted to investigate how telecom providers address this in their current strategy and how they want to achieve this in the future. To get a better idea of what the customer expects from such a customer service chatbot, a survey was conducted to which the KANO method was applied to categorise the various quality attributes.\\
+Chatbots are increasingly being used to take over repetitive tasks from human agents; the telecom industry is one of those sectors where they are already prominently present. Through a qualitative chatbot, a company can create value that can provide a potential competitive advantage. To create this advantage, it is therefore necessary that this chatbot delivers quality work. In order to uncover the definition of quality in this context, interviews were conducted to investigate how telecom providers address this in their current strategy and how they want to achieve this in the future. To get a better idea of what the customer expects from such a chatbot, a survey was conducted to which the KANO method was applied to categorise the various quality attributes.\\
 \break
-The results showed that the current quality of customer service chatbots is not yet optimal. The tasks are not always carried out correctly and they still need help from agents, although this is in the same direction as what customers expect. Users are convinced that chatbots are not yet able to handle services in the same qualitative a manner as an agent would. They do confirm that chatbots are easy to use and that they are accessible. The opinion of whether a chatbot is enjoyable to use cannot be generalised; this would require more extensive research. From the KANO research, it can be stated that it is explicitly necessary for a chatbot to be easy to use. It is also important for customers that the chatbot is available 24/7. The weaknesses of current chatbots are also visible in the future objectives of telecom providers; they are trying to improve the chatbots by applying data analysis and adding extra features (sentiment analysis, etc.) in order to close the gap between the current quality and the customer expectations.\\
+The results showed that the current quality of chatbots is not yet optimal. The tasks are not always carried out correctly and they still need help from agents, although this is in the same direction as what customers expect. Users are convinced that chatbots are not yet able to handle services in the same qualitative manner as an agent would. They do confirm that chatbots are easy to use and that they are accessible. The opinion of whether a chatbot is enjoyable to use cannot be generalised; this would require more extensive research. From KANO, it can be stated that it is explicitly necessary for a chatbot to be easy to use. It is also important for customers that the chatbot is available 24/7. The weaknesses of current chatbots are also visible in the future objectives of telecom providers; they are trying to improve the chatbots by applying data analysis and adding extra features (sentiment analysis, etc.) in order to close the gap between the current quality and the customer expectations.\\
 \break
-The results of the research can be used by telecom providers to gain better insight into what aspects they need to focus on to make their chatbot more qualitative. The research has to be seen from a sober perspective, customer service chatbots change very fast and this goes together with customer expectations. If this research is conducted in a few months or years, the results may be different.
+The results of the research can be used by telecom providers to gain better insight into what aspects they need to focus on to make their chatbot more qualitative. The research has to be seen from a sober perspective, chatbots change very fast and this goes together with customer expectations. If this research is conducted in a few months or years, the results may be different.
