--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -6,175 +6,130 @@
 \section{Research Questions \& Hypotheses}
 To determine the influence of chatbots on the telecom industry, various questions must be asked of the industry's participants. These inquiries are predicated on a hypothesis from which we begin our investigation.\\
 \break
-Even if reality suggests otherwise, the hypotheses are developed with a favourable expectation in mind.\\
-\break
-\textbf{Main Question: Do current customer service chatbots know what they are supposed to do?}\\
+\textbf{Main Question: What is the influence of customer service chatbots for both the customer experience and the business value?}\\
 \break 
-Five research questions were formulated to answer this main research question:
+Three research questions were formulated to answer this main research question:
 
-\subsubsection{RQ1: Are current customer service chatbots effective in helping people and solving their problems?}
-It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \citep*{Muizzah2021, Brandtzaeg2018}.\
-In a task- oriented chatbot, under which a customer service chatbot can be placed, usefulness is key \citep{brandtzaeg2020}. Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
+\subsubsection{RQ1: Are current chatbots effective in helping people and solving their problems?}
+It is illogical to think that there will be people who will keep a good impression of a chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \citep*{Muizzah2021, Brandtzaeg2018}.\
+In a task-oriented chatbot, under which a chatbot can be placed, usefulness is key \citep{brandtzaeg2020}. Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
 \break
-\citep{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see literature study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
+\citeauthor{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see \ref{ch:literature-study}. Literature Study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses.\\
 \break
 \break
 Related hypotheses:
 \begin{enumerate}
-	\item H1: Current customer service chatbots execute requested tasks correctly. Based on \citep{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality”
-	\item H2: Current customer service chatbots can deliver the same services as a human agent. Based on \citep{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (reference: \citep{Eeuwen2017})
-	\item H3: Current customer service chatbots contain enough knowledge to provide good assistance. Based on \citep{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (reference: \citep*{Cohen2016, Kuligowska2015})
+	\setlength\itemsep{-0.1em}
+	\item H1: Current chatbots execute requested tasks correctly. Based on \citep{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality” (\acrshort{qa} 1).
+	\item H2: Current chatbots can deliver the same services as a human agent. Based on \citep{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (reference: \citep{Eeuwen2017}) (\acrshort{qa} 2).
+	\item H3: Current chatbots contain enough knowledge to provide good assistance. Based on \citep{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (reference: \citep*{Cohen2016, Kuligowska2015}) (\acrshort{qa} 3).
 \end{enumerate}
 
-\subsubsection{RQ2: Are current customer service chatbots easy to use and accessible?}
-When a customer service chatbot is effective in helping people, but is so complex or unusable that nobody uses it again, it is rational to assume that this chatbot has not made a good impression. In addition, a chatbot should be easily accessible, so that a high level of service is always present.\\
-Here, too, the quality attributes of \citep{Verkeyn2018} serve as the basis for evaluation. Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
+\subsubsection{RQ2: Are current chatbots easy to use and accessible?}
+When a chatbot is effective in helping people, but is so complex or unusable that nobody uses it again, it is rational to assume that this chatbot has not made a good impression. In addition, a chatbot should be easily accessible, so that a high level of service is always present.\\
+The quality attributes of \citep{Verkeyn2018} serve as the basis for evaluation. Relevant quality attributes that are linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
 \break
 \break
 Related hypotheses:
 \begin{enumerate}
-	\item H4: Current customer service chatbots are easy to use. Based on \citep{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (reference:\citep*{Candela2018, Duijst2017})
-	\item H5: Current customer service chatbots are available at all times (24/7). Based on \citep{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (reference: \citep{Wang2019})
+	\setlength\itemsep{-0.1em}
+	\item H4: Current  chatbots are easy to use. Based on \citep{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (reference:\citep*{Candela2018, Duijst2017}) (\acrshort{qa} 4).
+	\item H5: Current  chatbots are available at all times (24/7). Based on \citep{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (reference: \citep{Wang2019}) (\acrshort{qa} 5).
 \end{enumerate}
 
-\subsubsection{RQ3: Do current customer service chatbots create a pleasant customer experience?}
-When a customer uses a service or buys a product from a company, it is important that the customer has a good feeling about how this interaction went. When using a chatbot, a company wants to invoke a good feeling in the user as well. \\
+\subsubsection{RQ3: Do current chatbots create a pleasant customer experience?}
+When a customer uses a service or buys a product from a company, it is important that the customer has a good feeling about how this interaction went.\\
 \break
-A “pleasant” customer experience can be seen as an experience where the customer is helped in a friendly and smooth way.\\
+A “pleasant” customer experience can be seen as an experience where the customer is helped in a friendly and smooth way. It is not about the effectiveness or ease-of-use, although these have an impact on the experience as well. \\
 \break
 \break
 Related hypotheses:
 \begin{enumerate}
-	\item H6: Current customer service chatbots create an enjoyable interaction Based on \citep{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: \citep{Morrissey2013})
+	\setlength\itemsep{-0.1em}
+	\item H6: Current chatbots create an enjoyable interaction Based on \citep{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: \citep{Morrissey2013}) (\acrshort{qa} 6).
 \end{enumerate}
 
 \section{Methodology - Business Interviews}
-To gain more insight into what the customer service chatbot means for telecom businesses, an exploratory research was conducted through interviews. The interviews were conducted with conversational designers, product owners, developers and AI trainers from Proximus, Telenet, T-Mobile and KPN. Each interview was conducted online through Teams-meetings. The write-outs of these interviews can be found in the \ref{ch:appendices}ppendices\\
-\break
-The interview consists of four main parts:
-\begin{enumerate}
-	\item The current state of the customer service chatbot;
-	\item The benefits that the company derives from the presence of the chatbot;
-	\item The business value (revenue, reduced costs) realised by the chatbot;
-	\item The company's future vision of the chatbot.
-\end{enumerate}
+To gain more insight into what the chatbot means for telecom businesses, an exploratory research was conducted through interviews. The interviews were conducted with conversational designers, product owners, developers and AI trainers from Proximus, Telenet, T-Mobile and KPN. The write-outs of these interviews can be found in the \ref{ch:appendices}ppendices. The interview consists of four main parts:
 
-\subsection{The current state of the customer service chatbot}
-The chatbot's general specifications were questioned in the first phase. This can be explained in terms of the chatbot's capabilities (FAQs, complaint handling, sales, etc. ), the platforms on which the bot can be found, the languages in which the bot can be addressed, the age group of the relevant users, and the types of questions the bot can answer (yes/no questions, open/vague questions).\\
+\subsection{The current state of the chatbot}
+The chatbot's general specifications were questioned in the first phase, this can be explained in terms of the capabilities (FAQs, complaint handling, sales, etc. ), the platforms on which the bot can be found, the languages in which it can be used, the age group of the relevant users, and the types of questions the bot can answer (yes/no questions, open/vague questions).
 
 \subsection{The benefits that the company derives from the presence of the chatbot}
-The second section focuses on the specific benefits that the firm receives from using the chatbot. For example, the chatbot is asked what services it can provide. This primarily pertains to renewing or forming a new membership, purchasing products/services, obtaining specific invoice details, and so on. The question also asks to what extent the chatbot can reduce customer support workload, and then goes into further depth about how many questions or tasks a chatbot cannot perform on its own. Furthermore, the focus is on how eager clients of the providers are to use a chatbot. Finally, the negative aspects of the story are discussed. One questions asks, for example, if there is more frustration among customers and whether customers trust the chatbot.\\
+This section focuses on the benefits that the firm receives from using the chatbot. For example, the chatbot is asked what services it can provide. This pertains to renewing or forming a new membership, purchasing products/services, obtaining specific invoice details, and so on. The question also asks to what extent the chatbot can reduce customer support workload, and then goes into further depth about how many questions or tasks a chatbot cannot perform on its own. Furthermore, the focus is on how eager clients of the providers are to use a chatbot. Finally, the negative aspects of the story are discussed.
 
 \subsection{The business value (revenue, reduced costs) realised by the chatbot}
-The third part is about the business value that is created. First, it looks at how much extra direct turnover is created by the chatbot. Then it looks at how this value is generated, it asks about the availability of the chatbot, and how it handles conversations when no physical agents are present. Next, it looks at what the initial strategic goal of the chatbot was, was it just added to improve customer service, or was it more of a marketing stunt?  It also asks how much the chatbot costs and which cost items were the most expensive. Finally, it looks at how many fewer people are employed in customer service because of the chatbot.\\
+The third part is about the business value that is created. First, it looks at how much extra direct turnover is created by the chatbot. Then it looks at how this value is generated, it asks about the availability of the chatbot, and how it handles conversations when no human agents are present. Next, it looks at what the initial strategic goal of the chatbot was, was it just added to improve customer service, or was it more of a marketing stunt?  It also asks how much the chatbot costs and which cost items were the most expensive. Finally, it looks at how many fewer people are employed in customer service because of the chatbot.
 
 \subsection{The company's future vision of the chatbot}
-The fourth and final part focuses on the company's future vision of the chatbot. They look at the extra features they want to add and how they want to improve the chatbot in terms of technology. The latter could include sentiment analysis, fully AI driven, and so on. Finally, they are asked how they determine what scenarios/dialogs they want to put in the bot and how they will apply this in the future.\\
+The fourth and final part focuses on the company's future vision of the chatbot. They look at the extra features they want to add and how they want to improve the chatbot in terms of technology. Finally, they are asked how they determine what scenarios/dialogs they want to put in the bot and how they will apply this in the future.
 
 \section{Methodology - Survey}
 The research questions and hypotheses will be investigated by means of a joint survey.\\
 \break
-These two strategies will be used to generate the most amount of business value possible. For the business, the value is created by comparing the competition and gathering insight into what the customers consider important. For the customer is the value found in better chatbots as a result of the study.\\
+These two strategies will be used to generate the most amount of business value possible. For the business, the value is created by comparing the competition and gathering insight into what the customers consider important. For the customer, the value is found in better chatbots as a result of the study.\\
 
 \subsection{Are these attributes present for the specific chatbot?}
-To find out if the selected attributes are present, several questions will be used to check with the clients using the chatbots. The used questions per research question are listed below.
+To find out if the selected attributes are present, several questions will be used to check with the clients using the chatbots. The used questions per hypothesis are listed below.
 
-\subsubsection{RQ1: Are current customer service chatbots effective in helping people and solving their problems?}
-\begin{itemize}
-	\item H1: Current customer service chatbots execute requested tasks correctly.
-	\begin{itemize}
-		\item Did the chatbot fulfil your task correctly?
-	\end{itemize}
-	\item H2: Current customer service chatbots can deliver the same services as a human agent.
-	\begin{itemize}
-		\item Does the chatbot deliver the same services as a human?
-	\end{itemize}
-	\item H3: Current customer service chatbots contain enough knowledge to provide good assistance.
-	\begin{itemize}
-		\item Did the chatbot contain enough knowledge to help with your problem?
-	\end{itemize}
-\end{itemize}
-
-\subsubsection{RQ2: Are current customer service chatbots easy to use and accessible?}
-\begin{itemize}
-	\item H4: Current customer service chatbots are easy to use.
-	\begin{itemize}
-		\item Was the chatbot easy to use?
-	\end{itemize}
-	\item H5: Current customer service chatbots are available at all times (24/7).
-	\begin{itemize}
-		\item Is the chatbot available at all times?
-	\end{itemize}
-\end{itemize}
-
-\subsubsection{RQ3: Do current customer service chatbots create a pleasant customer experience?}
-\begin{itemize}
-	\item H6: Current customer service chatbots create an enjoyable interaction.
-	\begin{itemize}
-		\item Did you enjoy interacting with the chatbot?
-	\end{itemize}
-\end{itemize}
+\begin{longtable}{|l|l|}
+	\hline
+	\textbf{H1} & Did the chatbot fulfil your task correctly?                         \\ \hline
+	\endfirsthead
+	%
+	\endhead
+	%
+	\textbf{H2} & Does the chatbot deliver the same services as a human?              \\ \hline
+	\textbf{H3} & Did the chatbot contain enough knowledge to help with your problem? \\ \hline
+	\textbf{H4} & Was the chatbot easy to use?                                        \\ \hline
+	\textbf{H5} & Is the chatbot available at all times?                              \\ \hline
+	\textbf{H6} & Did you enjoy interacting with the chatbot?                         \\ \hline
+	\caption{An overview of each hypothesis along with its respective question.}
+	\label{tab:YNOverview}
+\end{longtable}
 \ul{Rating scale}\\
-For answering the statements, yes/no questions will be used to check the presence of these attributes.\\
+For answering the statements, yes/no questions will be used to check the presence of these attributes.
 
 \subsubsection{Data Evaluation Method - Comparative Study}
-Both providers’ chatbots will be compared to one another to see which attributes are present in which chatbot.\\
+All providers’ chatbots will be compared to one another to see which attributes are present in which chatbot.
 
 \subsection{How important are these attributes for the clients?}
 The research questions and hypotheses will be investigated/evaluated by means of the proven KANO method. The method of application is inspired by the study of \citep{Verkeyn2018}.\\
 \break
-To find out which of the chose 6 attributes types are seen as important, the following questions per category will be used.
+To find out which of the chosen 6 attributes types are seen as important, the following questions per category will be used.
 
-\subsubsection{Under ``Effective in helping people and solving their problems"}
-\begin{enumerate}
-	\item Execute requested tasks
-	\begin{itemize}
-		\item The chatbot (DOES NOT) execute(s) every/any requested task that can reasonably be expected to be executed successfully.
-	\end{itemize}
-	\item Number of services available in the chatbot
-	\begin{itemize}
-		\item The chatbot can (NOT) perform the same services as a human agent.
-	\end{itemize}
-	\item Contains breadth of knowledge
-	\begin{itemize}
-		\item The chatbot knows at least as much as an expert in the same industry/service./ The chatbot knows less than an expert in the same industry/service.
-	\end{itemize}
-\end{enumerate}
-
-\subsubsection{Under "Ease of use and accessibility"}
-\begin{enumerate}
-	\item Ease of use
-	\begin{itemize}
-		\item The chatbot is (NOT) self-explanatory in its use.
-	\end{itemize}
-	\item Available at all times
-	\begin{itemize}
-		\item The chatbot is (NOT) available at all times.
-	\end{itemize}
-\end{enumerate}
-
-\subsubsection{Under "Pleasant customer experience"}
-\begin{enumerate}
-	\item Create an enjoyable interaction
-	\begin{itemize}
-		\item The chatbot (DOES NOT) communicate(s) in a robotic, non-empathic way./ The chatbot interacts in an enjoyable way.
-	\end{itemize}
-\end{enumerate}
+\begin{longtable}{|l|l|}
+	\hline
+	\textbf{H1} & The chatbot (DOES NOT) execute(s) the given task correctly           \\ \hline
+	\endfirsthead
+	%
+	\endhead
+	%
+	\textbf{H2} & Does the chatbot deliver the same services as a human?               \\ \hline
+	\textbf{H3} &
+	\begin{tabular}[c]{@{}l@{}}The chatbot knows at least as much as an expert in the same\\ industry. / The chatbot knows less than an expert in\\ the same industry\end{tabular} \\ \hline
+	\textbf{H4} & The chatbot is (NOT) easy to use.                                    \\ \hline
+	\textbf{H5} & The chatbot is (NOT) available at all times.                         \\ \hline
+	\textbf{H6} & The chatbot (DOES NOT) communicate(s) in a robotic, non-empathic way \\ \hline
+	\caption{An overview of each hypothesis along with its respective KANO question.}
+	\label{tab:KANOQuestions}
+\end{longtable}
 \ul{Rating scale}\\
-For answering the statements, a five-level rating scale in the spirit of the one drawn up by \citep{KANO1984}, will be used.\\
+For answering the statements, a five-level rating scale based on \citep{KANO1984}, will be used.\\
 \break
-The levels are as follows:\\
+The levels are as follows:
 \begin{enumerate}
+	\setlength\itemsep{-0.1em}
 	\item I dislike it
 	\item I can live with it
 	\item I am neutral
 	\item I expect it
 	\item I like it
 \end{enumerate}
-This scale allows users to express how much they agree with a given statement.\\
+This scale allows users to express how important a statement is.
 
 \subsubsection{Data Evaluation Method - Comparative Study}
-To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. Kano is a tool that can satisfy these desires. The Kano Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. Kano offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Attractive, Performance, Must-Be, Indifferent, Reverse). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
+To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. KANO is a tool that can satisfy these desires. The KANO Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. KANO offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Attractive, Performance, Must-Be, Indifferent, Reverse). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
 
 \begin{figure}[ht]
 	\includegraphics[scale=0.35]{../LaTeX/Figures/KANO.png}
@@ -182,7 +137,7 @@ To be able to answer the second main question, there is a need for an evaluation
 	\label{fig:kano}
 \end{figure}
 \break
-The five categories can be represented visually as in Figure \ref{fig:kano}, each category showing a different relationship.\\
+The five categories are represented visually as in Figure \ref{fig:kano}, each category showing a different relationship.\\
 \break
 Attractive: if a quality attribute from this category is more present, the customer satisfaction will increase more than linearly. When the quality attribute is not present, the customer will have neither a positive nor negative customer satisfaction.\\
 \break
@@ -192,30 +147,30 @@ Indifferent: If a quality attribute from this category is present, then this has
 \break
 Must-Be: The customer considers this kind of quality attribute as necessary, when it is not present, the customer satisfaction will be drastically low and the product basically has failed at this point.\\
 \break
-Reverse: The more these quality attributes are present, the worse the customer satisfaction. The customer satisfaction increases when they are less present.\\
+Reverse: The more these quality attributes are present, the worse the customer satisfaction. The customer satisfaction increases when they are less present.
 
 \subsection{Survey arrangement}
 The survey is divided up into 3 parts:\\
 \break
 \ul{Part 1 - general information about the participant and information on the interaction with the chatbot}\\
 \break
-In the first part, general information about the participant is requested so that we can get a better idea of the person. The postal code, age, highest obtained degree, and gender are requested, these variables can be added as control variables in the static models to process the results.\\
+In the first part, general information about the participant is requested such as the postal code, age, highest obtained degree, and gender are requested, these variables can be added as control variables in the static models to process the results.\\
 \break
 Next, they are asked from which company they used the chatbot, what task they performed, in what language they addressed the chatbot and on what platform they addressed the chatbot.\\
 \break
 \ul{Part 2 - questions about the interaction with the chatbot}\\
 \break
-The second part focuses on the interaction with the chatbot, the questions that were drawn up for the hypotheses in section \textbf{3.3.1 of the Methodology} are asked here. The results of this study are used to evaluate each company's chatbot, then a comparative study is conducted to determine which chatbot performs best.\\
+The second part focuses on the interaction with the chatbot, the questions that were drawn up for the hypotheses in section \textbf{3.3.1 of the Methodology} are asked here. The results of this study are used to evaluate each company's chatbot, then a comparative study is conducted.\\
 \break
 \ul{Part 3 - questions about the customer expectations of a telecom customer service chatbot}\\
 \break
-The third and final part of the survey asks what the customer expects from customer service chatbot in various scenarios. In order to put the participant in a certain context, three different scenarios were created in which a customer might find himself with the corresponding telecom services. The three scenarios are as follows:
+The final part of the survey asks what the customer expects from customer service chatbot in various scenarios. In order to put the participant in a certain context, three different scenarios were created in which a customer might find himself with the corresponding telecom services. The three scenarios are as follows:
 \begin{enumerate}
-	\item You haven't switched off your phone in a while and it suddenly ran out of battery. You have a problem because you don't remember your PIN code. You ask the chatbot if he can retrieve your PIN code given your client details. 
-	\item You're not happy with your subscription because it doesn't match your needs, from a friend you've heard there is a better deal and so you want the chatbot to stop your subscription.
-	\item At least once each month, you lose internet connectivity. You're sick and tired of these problems and you want to file a formal complaint. You turn to the chatbot of your telecom provider with your complaint.
+	\item You have not switched off your phone in a while and it  ran out of battery. You have a problem because you do not remember your PIN code. You ask the chatbot if he can retrieve your PIN code given your client details. 
+	\item You are not happy with your subscription because it does not match your needs, from a friend you have heard there is a better deal so you want the chatbot to stop your subscription.
+	\item At least once each month, you lose internet connectivity. You are tired of these problems and you want to file a complaint. You turn to the chatbot of your telecom provider with your complaint.
 \end{enumerate}
-After a participant is introduced to each scenario, he/she is asked each time to give his/her opinion on the statements drawn up in \textbf{3.3.2 of the Methodology}. As already mentioned, the statements are questioned using a 5 rating scale, this terminology will then be used in the result processing through the KANO model.
+After a participant is introduced to each scenario, they were asked each time to give his/her opinion on the statements drawn up in \textbf{3.3.2 of the Methodology}.
 
 \subsection{Target group}
-The target group of our survey will not be filtered on age or other human characteristics, but it will be screened on whether the person has already had an experience with a telecom chatbot of a provider located in Belgium or in the Netherlands. The fact that the person already has experience with a telecom chatbot is crucial, otherwise the input for the comparative study is invalid.
+The target group of our survey will not be filtered on human characteristics, but it will be screened on whether the person has already had an experience with a telecom chatbot of a provider located in Belgium or in the Netherlands.
