--- a/Thesis/LaTeX/Introduction.tex
+++ b/Thesis/LaTeX/Introduction.tex
@@ -3,9 +3,9 @@
 
 \chapter{Introduction}
 \label{ch:introduction}
-For companies, customer service is an important aspect, if they offer this service in the best possible way, they can improve the customer experience and retain the trust of the customer. 
-The advent of \acrfull{ai} offers a new perspective to deliver this service in an innovative way. \acrshort{ai} in combination with other technologies, such as \acrshort{nlp} and \acrshort{ml}, allows companies to scale their relevant and personal customer interactions without losing the necessary qualities \citep*{Quintino2019, Wilson2017}. Companies that capitalise on these technological advances can derive competitive advantages from them, as they can make their business processes more efficient and subsequently be more productive.\\
+For companies, customer service is an important aspect. If it is offered in a good way, they can improve the customer experience and retain their trust.
+The advent of \acrshort{ai}, in combination with other technologies, such as \acrshort{nlp} and \acrshort{ml}, allows companies to scale their relevant and personal customer interactions without losing the necessary qualities \citep*{Quintino2019, Wilson2017}. Companies that capitalise on these technological advances can derive competitive advantages from them, as they can make their business processes more efficient and be more productive.\\
 \break
-Chatbots have already entered the (general) customer service scene of several industries a few years ago, these bots offer the possibility to interact with customers in an automated way. An industry in which customer relations are very important is the telecom sector. Different providers offer the same kind of products within the same range of tariffs, so the quality of customer service plays an important role in customer churn. From an observation of the Belgian and Dutch telecom market, it quickly became clear that the vast majority of providers have a customer service chatbot. The impact of these customer service chatbots on the customer experience and the internal policy of the telecom providers is unprecedented or minimally researched. In order to gain more insight into this impact, this research will focus on the following: on the one hand, it will examine what influence chatbots have on providers' current policies, and then the future vision of chatbots will also be mapped out. On the other hand, this research will take a closer look at customer satisfaction and what the customer exactly expects from the different aspects within a customer service chatbot.\\
+Chatbots have entered the customer service scene of several industries a few years ago. These bots offer the possibility to interact with customers in an automated way. An industry in which customer relations are important is the telecom sector. Different providers offer the same kind of products within the same range of tariffs, so the quality of customer service plays an important role in customer churn. The impact of these chatbots on the customer experience and the internal policy of the telecom providers is minimally researched. In order to gain more insight into this impact, this research will focus on the following: on the one hand, it will examine what influence chatbots have on providers' current policies, the future vision of chatbots will also be mapped out. On the other hand, this research will take a closer look at customer expectations from the different aspects within a chatbot. The findings from this research can be used by telecom providers to improve their chatbot and to close the gap between their current chatbot and the customer expectations.\\
 \break
-The findings from this research can be used by the various telecom providers to improve their chatbot and to close the gap between the current chatbot state and the corresponding customer expectations.
+In the next section, the current state of the art is discussed by means of a literature study. Next, the structure of the research is elaborated in the methodology. After that, the results of the research are outlined and further analysed. Chapter 5 discusses the limits of this research and what future research can do. Finally, the overall findings of this thesis are summarised in a conclusion.
