--- a/Thesis/LaTeX/Layout/Titlepage.tex
+++ b/Thesis/LaTeX/Layout/Titlepage.tex
@@ -10,10 +10,10 @@
 	\end{figure}
 	
 	\vspace*{4.5cm}
-	{\color{kuleuven1}{\Huge  A survey on the impact of customer service chatbots on e-commerce}}
+	{\color{kuleuven1}{\Huge  A study on the impact of customer service chatbots on the telecom industry}}
 	
 	\vspace*{0.5cm}
-	{\Large Type your subtitle here}
+	{\Large A study focusing on the impact of a customer service chatbot on both business and customer side within the telecom industry.}
 	
 	\begin{figure}[b]
 		%\centering
@@ -26,14 +26,14 @@
 								{r0836627, r0837708} \linebreak
 								
 								\textbf{{\large Thesis submitted to obtain \linebreak
-										the degree of  master in the Information Management}} \linebreak
+										the degree of  master in Information Management}} \linebreak
 								
 								%!!!IMPORTANT!!!:
 								%indicate the appropriate title of your master and major. Check the website https://feb.kuleuven.be/studentenportaal/contact/masterproef-leuven
 								{\large Information Management}\linebreak
 								\linebreak
 								\textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
-								\textbf{{\large Tutor:}} Vedavyas Etikala \linebreak
+								\textbf{{\large Supervisor:}} Vedavyas Etikala \linebreak
 								
 								%\linebreak
 								
