--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -24,7 +24,7 @@ These variants can be further divided into different categories based on multipl
 This categorisation is based on the internal architecture. Two types emerge: \textbf{Rule-based} chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and cannot handle new inputs. On the other hand, \textbf{\acrshort{ai}-based} chatbots use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs \citep{Maroengsit2019}.
 
 \subsubsection{Domain}
-The domain category is about how broad the domain is in which the chatbot is used. \textbf{Domain specific} chatbots focus on \textbf{specific industries}. They have knowledge of the industry they are deployed in. On the other hand, \textbf{general domain} chatbots are created to support conversations in \textbf{open topics}. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline \citep{Maroengsit2019}.
+The domain category is about how broad the domain is in which the chatbot is used. \textbf{Domain specific} chatbots focus on \textbf{specific industries}. They have knowledge of the industry they are deployed in. On the other hand, \textbf{general domain} chatbots are created to support conversations in \textbf{open topics}. They do not support a specific domain. Instead, they are versatile and may be applied to any discipline \citep{Maroengsit2019}.
 
 \subsubsection{Platform}
 Chatbots can be divided up based on the platform on which they are active. \textbf{Social media} chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. \textbf{Web based} chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. \textbf{Standalone program} chatbots are installed as a separate program on the device of the user \citep*{Maroengsit2019, Xu2017, CICBA2018}.
@@ -46,7 +46,7 @@ This categorisation results in \textbf{task-oriented} and \textbf{non-task-orien
 \end{enumerate}
 
 \section{Chatbots in the telecom industry: a deeper insight}
-The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies. This paper aims to further draw the line into the Belgian \& Dutch telecom sector. The services offered by the telecom operators in both countries can be divided into 2 categories: fixed internet and mobile.
+The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino2019} were applied to Portuguese telecom companies. This paper aims to further draw the line into the Belgian \& Dutch telecom sector. The services offered by the telecom operators in both countries can be divided into 2 categories: fixed internet and mobile.
 
 \subsection{The Belgian telecom industry: market overview}
 According to the survey conducted by Eurostat in 2019, the Belgian telecom sector is the most expensive in Europe \citep{Eurostat2020}.\\
@@ -128,7 +128,7 @@ The efficiency and effectiveness in performing a productive task is considered a
 The study by \citeauthor{Skjuve2019} cites that the efficiency of the chatbot was one of the main motivators for the customers to use the chatbot.\citep{Skjuve2019}\\
 \break
 \ul{Empathy}\\
-The study of \citeauthor{Cheng2021} concludes that the empathetic factor of the chatbot is important for successful interactions. The empathetic factor of a chatbot makes the user's perspective more appreciated, while also making it more responsive to the specific needs of the consumer.\\
+The study of \citeauthor{Cheng2021} concludes that the empathetic factor of the chatbot is important for successful interactions. The empathetic factor of a chatbot makes the user's perspective more appreciated, while also making it more responsive to the specific needs of the consumer \citep{Cheng2021}.\\
 The study of \citeauthor{Agarwal2021} reaffirms that empathy has a positive influence on the interaction with the chatbot. Chatbots trained by data models that took more empathy/emotions into account, responded in a similar way to human agents. In turn, this had a better impact on customer interaction. \citep{Agarwal2021}\\
 \break
 \ul{Task complexity}\\
@@ -165,14 +165,14 @@ Many users who interact with a chatbot are scared that their data is being captu
 One of the biggest categories of mistakes are the shortcomings of customer expectations. This varies from failing to understand their request or intent, giving wrong answers, providing a poor quality of content as well as miscommunication errors. These issues leave a bad taste in the mouth of the customer and makes them not return to the company \citep*{Adamopoulou2020, Duka2021, Nichifor2021, Sheehan2020, Margot}.
 
 \subsection{Bias}
-Bias can be shown towards multiple facets such as race, gender and religion. When taking a closer look at gender, it is interesting to see that the bias comes from both directions. Chatbots can make biased remarks towards it's customers. At the same time, study shows that the customer applies gender bias towards gender identified chatbots in the field of gender-stereotypical subject domains such as mechanics for male chatbots. It is important to reduce the bias as much as possible for a smoother interaction between both parties \citep*{Adamopoulou2020, McDonnell2019}. Gender neutral bots seem to receive high satisfaction ratings in comparison to male and female chatbots, even though they are generally perceived with more negative personality traits such as colder and less friendly \citep{McDonnell2019}.
+Bias can be shown towards multiple facets such as race, gender and religion. When taking a closer look at gender, it is interesting to see that the bias comes from both directions. Chatbots can make biased remarks towards its customers. At the same time, study shows that the customer applies gender bias towards gender identified chatbots in the field of gender-stereotypical subject domains such as mechanics for male chatbots. It is important to reduce the bias as much as possible for a smoother interaction between both parties \citep*{Adamopoulou2020, McDonnell2019}. Gender neutral bots seem to receive high satisfaction ratings in comparison to male and female chatbots, even though they are generally perceived with more negative personality traits such as colder and less friendly \citep{McDonnell2019}.
 
 \subsection{Toxic content and social harm}
 Toxic content is a severe drawback for customers. Getting insulted and racial slurs thrown at your head is the last thing a customer wants. This issue is mostly present with chatbots that use each conversation as a learning ground. Malicious users can fully impact and transform the vocabulary used by the chatbot in a matter of hours \citep{Adamopoulou2020}.\\
 Toxic content can be taken even a step further when applied to social network bots. An example might be a chatbot that tweets about racist things, claiming that someone has committed rape or abuse, murder etc \citep{Radziwil2021}.
 
 \subsection{Lack of knowledge about good and bad attribute types}
-It is difficult to tailor a chatbot to the exact need of the customers. This is due to the fact that there isn't a clear understanding about what the user deems important or critical as a success factor. The absence of knowledge on this front makes for a poor chatbot user experience \citep{brandtzaeg2020}.
+It is difficult to tailor a chatbot to the exact need of the customers. This is due to the fact that there is not a clear understanding about what the user deems important or critical as a success factor. The absence of knowledge on this front makes for a poor chatbot user experience \citep{brandtzaeg2020}.
 
 \subsection{Not understanding the capabilities of the chatbot}
 When customers do not fully understand the capabilities of a chatbot, they cannot optimally use the service provided. This may result in frustrations or unnecessary limitations due to the absence of knowledge. It is in a company's best interest to clearly specify what capabilities their chatbot has \citep{brandtzaeg2020}.
